# device-agent

./: .gitignore  Cargo.toml  README.rst  build.rs
libavtools/: Makefile  avtools.c  avtools.h  show_raw_rgb.py  yuv420p_to_rgb.py
libavtools/examples/: Makefile  decoding_encoding.c  scaling_video.c  test.h264
src/: main.rs
src/c/: avtools.c  avtools.h  make.sh
src/devices/: mod.rs
src/devices/screen/: ffi.rs  mod.rs
