[package]
name = "device-agent"
version = "0.0.1"
authors = ["Luo <gnulinux@126.com>"]
links   = "avtools"
build   = "build.rs"

[dependencies]
# bmp        = "0.1.4"
# lodepng    = "0.8.1"
libc       = "0.2.13"
ffmpeg-sys = "2.8.9"
time       = "0.1.35"

# https://github.com/tomaka/glutin/tree/master/src/api

# GNU/Linux 
# [target.'cfg(any(target_os = "linux", target_os = "dragonfly", target_os = "freebsd", target_os = "openbsd"))'.dependencies]
# # https://github.com/Daggerbot/x11-rs/blob/master/examples/xrecord/main.rs
# xlib   = "*"
# x11cap = "*"
# https://crates.io/search?q=Wayland

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = { path="../core-foundation-rs/core-foundation" }
core-graphics   = { path="../core-graphics-rs" }

[target.'cfg(target_os = "windows")'.dependencies]
# https://github.com/retep998/winapi-rs
user32-sys = "*"
gdi32-sys  = "*"

[build-dependencies.gcc]
git = "https://github.com/alexcrichton/gcc-rs"

